fixed spacing between query and results

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -2097,7 +2097,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-right: 20px; }
 
 .feature-area {
-  padding: 100px 0 120px; }
+  padding: 20px 0 120px; }
   @media (max-width: 991px) {
     .feature-area {
       padding: 80px 0px; } }
